--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.1.0",
+        "@vee-validate/zod": "^4.15.1",
         "@vue-flow/background": "^1.3.2",
         "@vue-flow/controls": "^1.1.3",
         "@vue-flow/core": "^1.46.0",
@@ -42,10 +43,11 @@
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "motion-v": "^1.7.1",
-        "reka-ui": "^2.2.0",
+        "reka-ui": "^2.5.0",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
+        "vee-validate": "^4.15.1",
         "vue": "^3.5.13",
         "vue-scroll-picker": "^2.0.1"
     },
