--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "tw-animate-css": "^1.2.5",
         "vee-validate": "^4.15.1",
         "vue": "^3.5.13",
-        "vue-scroll-picker": "^2.0.1"
+        "vue-scroll-picker": "^2.0.1",
+        "vuedraggable": "^4.1.0"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
