--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "vee-validate": "^4.15.1",
         "vue": "^3.5.13",
         "vue-scroll-picker": "^2.0.1",
+        "vue-sonner": "^2.0.9",
         "vuedraggable": "^4.1.0"
     },
     "optionalDependencies": {
