--- a/package.json
+++ b/package.json
@@ -31,19 +31,22 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.1.0",
+        "@internationalized/date": "^3.10.1",
         "@vee-validate/zod": "^4.15.1",
         "@vue-flow/background": "^1.3.2",
         "@vue-flow/controls": "^1.1.3",
         "@vue-flow/core": "^1.46.0",
         "@vue-flow/minimap": "^1.5.4",
         "@vueuse/core": "^12.8.2",
+        "chrono-node": "^2.9.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "motion-v": "^1.7.1",
-        "reka-ui": "^2.5.0",
+        "radix-vue": "^1.9.17",
+        "reka-ui": "^2.7.0",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
